demos/build/brk225h/k8s/chatapi-canary-launch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatapi
  labels:
    app: chatapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chatapi
  template:
    metadata:
      labels:
        app: chatapi
      annotations:
        sidecar.istio.io/rewriteAppHTTPProbers: "true"
    spec:
      containers:
        - name: chatapi
          image: chatapi:v1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
            failureThreshold: 3
            initialDelaySeconds: 1
            timeoutSeconds: 10
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 1
            timeoutSeconds: 15
            periodSeconds: 5
          resources:
            requests:
              cpu: 5m
              memory: 128Mi
            limits:
              cpu: 10m
              memory: 256Mi
